deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy
  labels: 
    app: myapp
    tier: front-end
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  template:
    metadata:
      name: nginx
      labels:
        app: myapp      
    spec:
      containers:
        - name: nginx
          image: nginx
