multiContainerPod.yaml
apiVersion: 1
kind: Pod
metadata:
  name: my-app
  labels:
      app: myapp
      type: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
    - name: log-agent
      image: log-agent


#kubectl create -f pod-definition.yml
#
#Kind:      Version:
#
#POD        v1
#Service    v1
#Replicaset apps/v1
#Deployment apps/v1
