pod-lables-affinity.yml
apiVersion: 1
kind: Pod
metadata:
  name: my-app
  labels:
      app: myapp
      type: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx
  affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: color
                operator: In
                values:
                - blue
#kubectl create -f pod-definition.yml
#
#Kind:      Version:
#
#POD        v1
#Service    v1
#Replicaset apps/v1
#Deployment apps/v1
