pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
    tier: front-end  
spec:
  containers:
  - name: nginx
    image: nginx
