podForConfigMap.yml
apiVersion: 1
kind: Pod
metadata:
  name: my-app
  labels:
      app: myapp
      type: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
