service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-deploy
spec:
  type: NidePort
  ports:
    - port: 80
      targetport: 80
      nodePort: 30004
  selector:
    matchLabels:
      app: myapp
